--- a/src/components/SidePanel/UserList.css
+++ b/src/components/SidePanel/UserList.css
@@ -1,6 +1,7 @@
 .menumenu {
    bottom: 1.0em ;
    top: 0.1em;
+   padding: 0.0em;
    overflow: scroll;
    border: 1px dotted black;
    height: 420px;
