--- a/src/components/SidePanel/UserList.css
+++ b/src/components/SidePanel/UserList.css
@@ -1,20 +1,17 @@
-.menumenu {
-   bottom: 1.0em ;
-   top: 0.1em;
-   padding: 0.0em;
+.MenuMenu {
+   top: 1.0em;
    overflow: scroll;
    border: 1px dotted black;
    height: 420px;
    position: relative;
 }
 
-.menuitem {
+.MenuItem {
   opacity: 1.0;
-  fontSize: 0.5em;
-  top: 0.0em;
+  fontSize: 3.0em;
 }
 
-.h4header{
-    paddingTop: 0.0em;
-    color: white;
- }
+.MenuHeader{
+  padding-top: 1.0em;
+  color: white;
+}
