--- a/src/components/Messages/Contact.css
+++ b/src/components/Messages/Contact.css
@@ -1,26 +1,17 @@
-.contactmenu {
-   bottom: 1.0em ;
-   top: 0.1em;
-   border: 1px dotted black;
-   height: 420px;
+.ContactMenuMenu {
+   top: 1.0em;
    position: relative;
+   color: white;
+   size: tiny;
 }
 
-.contactitem {
+.ContactMenuItem {
   opacity: 1.0;
-  fontSize: 1.0 em;
-  top: 1.0 em;
-  bottom: 1.0 em;
+  fontSize: 3.0em;
   color: white;
 }
 
-.h4header{
-    paddingTop: 0.0em;
-    color: white;
- }
-
- .h5header{
-     paddingTop: 0.0em;
-     color: white;
-     text-align: center;
-  }
+.ContactMenuHeader{
+  padding-top: 1.0em;
+  color: white;
+}
