--- a/src/components/Messages/Employees.css
+++ b/src/components/Messages/Employees.css
@@ -1,8 +1,9 @@
 .EmployeesMenuMenu {
-   top: 5.0 em;
+   padding-top: 1.0em;
    position: relative;
    color: white;
    size: tiny;
+   border: 2px dotted black;
 }
 
 .EmployeesMenuItem {
