add client minor

--- a/src/components/Messages/Client.css
+++ b/src/components/Messages/Client.css
@@ -1,5 +1,6 @@
 .ClientMenuMenu {
-  padding-top: 0.5 em;
+  padding-top: 0.0em;
+  padding-bottom: 0.0em;
   position: relative;
   color: white;
   size: tiny;
