admin versus normal ui layout

--- a/src/components/Messages/Client.css
+++ b/src/components/Messages/Client.css
@@ -4,7 +4,7 @@
   position: relative;
   color: white;
   size: tiny;
-  border: 1px dotted black;
+  border: 1px dotted brown;
 }
 
 .ClientMenuItem {
