--- a/src/components/MetaPanel/ClientContact.css
+++ b/src/components/MetaPanel/ClientContact.css
@@ -3,7 +3,7 @@
    position: relative;
    color: white;
    size: tiny;
-   border: 2px dotted black;
+   border: 2px dotted brown;
 }
 
 .ClientContactMenuItem {
