--- a/src/components/Messages/Clients.css
+++ b/src/components/Messages/Clients.css
@@ -1,8 +1,9 @@
 .ClientsMenuMenu {
    padding-top: 0.5em;
+   margin-top: 1.0em;
    color: white;
    size: tiny;
-   border: 2px dotted black;
+   border: 2px dotted brown;
 }
 
 .ClientsMenuItem {
