--- a/src/components/Messages/Employee.css
+++ b/src/components/Messages/Employee.css
@@ -3,7 +3,7 @@
    position: relative;
    color: white;
    size: tiny;
-   border: 1px dotted black;
+   border: 1px dotted brown;
 }
 
 .EmployeeMenuItem {
