--- a/src/components/Messages/Employees.css
+++ b/src/components/Messages/Employees.css
@@ -1,9 +1,10 @@
 .EmployeesMenuMenu {
    padding-top: 1.0em;
+   margin-top: 1.0em;
    position: relative;
    color: white;
    size: tiny;
-   border: 2px dotted black;
+   border: 2px dotted brown;
 }
 
 .EmployeesMenuItem {
