--- a/src/components/MetaPanel/WorkOrders.css
+++ b/src/components/MetaPanel/WorkOrders.css
@@ -2,7 +2,7 @@
    padding-top: 0.5em;
    color: white;
    size: tiny;
-   border: 2px dotted black;
+   border: 2px dotted brown;
 }
 
 .OrdersMenuItem {
