--- a/src/components/SidePanel/Truck.css
+++ b/src/components/SidePanel/Truck.css
@@ -1,9 +1,9 @@
 .TruckMenuMenu {
-  padding-top: 0.0em;
-  padding-bottom: 0.0em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   position: relative;
   color: white;
-  size: tiny;
+  font-style: bold;
   border: 1px dotted brown;
 }
 
@@ -11,7 +11,7 @@
   opacity: 1.0;
   color: white;
   font-size: 0.8em;
-  font-style: bold
+  font-style: bold;
 }
 
 .TruckMenuHeader{
