--- a/src/components/MapPanel/Delivery.css
+++ b/src/components/MapPanel/Delivery.css
@@ -2,7 +2,7 @@
    padding-top: 0.5em;
    color: white;
    size: tiny;
-   border: 1px dotted white;
+   border: 1px dotted brown;
    height: 90px;
 }
 
