--- a/src/components/MetaPanel/WorkOrder.css
+++ b/src/components/MetaPanel/WorkOrder.css
@@ -1,9 +1,8 @@
 .OrderMenuMenu {
    padding-top: 0.5em;
-   color: white;
+   color: black;
    size: tiny;
-   border: 1px dotted brown;
-   height: 70px;
+   height: "70%";
 }
 
 .OrderMenuItem {
